feat: add to in query
